--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = f11uihealcast
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.f11uihealcast
+PRODUCT_BUNDLE_IDENTIFIER = com.f11uihealcast
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.f11uihealcast. All rights reserved.
