--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,4 +1,3 @@
-# This is a basic workflow to help you get started with Actions
 name: Pre-Release
 
 # Controls when the workflow will run
@@ -16,30 +15,34 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '11'
 
       - name: Setup Flutter
-        uses: subosito/flutter-action@v1
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
       
       - name: Get packages
-        run: flutter packages get
+        run: flutter pub get
 
-#       - name: Analyze
-#         run: flutter analyze
+      - name: Generate Java keystore
+        env: 
+          KEY_JKS: ${{ secrets.KEY_JKS }}
+        run: echo "$KEY_JKS" | base64 --decode > release-keystore.jks 
               
       - name: Build APK
+        env:
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: flutter build apk --split-per-abi
       
       - name: Pre-release APK by uploading it to Artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: APKS
           path: build/app/outputs/flutter-apk/*.apk
