--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,30 +16,34 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       
       - name: Get version from pubspec.yaml
         id: version
         run: echo "::set-output name=version::$(grep "version:" pubspec.yaml | cut -c10-)"
 
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '11'
 
       - name: Setup Flutter
-        uses: subosito/flutter-action@v1
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
       
       - name: Get packages
-        run: flutter packages get
-
-#       - name: Analyze
-#         run: flutter analyze
+        run: flutter pub get
+              
+      - name: Generate Java keystore
+        env: 
+          KEY_JKS: ${{ secrets.KEY_JKS }}
+        run: echo "$KEY_JKS" | base64 --decode > release-keystore.jks 
               
       - name: Build APK
+        env:
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: flutter build apk --split-per-abi
 
       - name: Get current date
@@ -51,7 +55,7 @@ jobs:
         with:
           allowUpdates: true
           artifacts: "build/app/outputs/flutter-apk/*.apk"
-          body: 'Published at ${{ steps.date.outputs.date }}'
-          name: 'v${{ steps.version.outputs.version }}'
+          body: "Published at ${{ steps.date.outputs.date }}"
+          name: "v${{ steps.version.outputs.version }}"
           token: ${{ secrets.GH_TOKEN }}
           tag: ${{ steps.version.outputs.version }}
